# sample_rust_site

./: Cargo.toml  Rocket.toml
rust-ai/: api.py  model.py  train.py
src/: main.rs
static/: index.html  script.js  style.css
templates/: index.html.tera
