[package]
name = "my_web_app"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
rocket_ws = "0.1.1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"